Update NavBar styles: add z-index for better stacking context; ensure consistent appearance in index.css and _navbar.scss

--- a/src/components/navBar/_navbar.scss
+++ b/src/components/navBar/_navbar.scss
@@ -62,7 +62,7 @@
     // background-color: var(--negro-2);
     transition: background-color 0.5s ease-in-out;
     width: 100%;
-
+    z-index: 10;
 }
 
 
